@@ -1123,6 +1123,12 @@ firstprivate(ls_attenuation, fac, f_local, aux, qt_cache, qref_cache, iso_cache,
                                            l_l.NLTELowerIndex(),
                                            l_l.NLTEUpperIndex(),
                                            t_nlte_i);
+
+			// Output line strength data for Theresa Lang to lowest priority output stream.
+			// This can be commented out again, when Theresa no longer needs it.
+			CREATE_OUT3;
+			out3 << "Line strength data (species, frequency, catalogue intensity, partition ratio, Boltzmann factor): "
+			     << l_l.Name() << ", " << l_l.F() << ", " << l_l.I0() << ", " << partition_ratio << ", " << K1*K2 << "\n"; 
                        
                         // Dopple broadening
                         const Numeric sigma = l_l.F() * doppler_const *sqrt( t_i / l_l.IsotopologueData().Mass());
