@@ -1,3 +1,12 @@
+2018-04-10  Stefan Buehler  <stefan.buehler(at)uni-hamburg.de>
+
+	* arts-2-3-1016
+
+	* src/absorption.cc (xsec_species): Added writeout of line strength
+	information to out3 for Theresa Lang. This should be commented out again after
+	Theresa no longer needs it. Just search for Theresa, her name is
+	in the comment above the code.
+
 2018-04-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-1015
